[metadata]
name = X Rebirth Station Calculator
author = Philipp Offensand
maintainer = Philipp Offensand
maintainer-email = phipsz+dev@lakrahn.de
summary = Calculate Resources needed for X Rebirth station complexes.
license = GPLv2
classifier =
    Development Status :: 2
    Environment :: Console
    Intended Audience :: Concurrency Theory
    License :: OSI Approved :: GPLv2
    Operating System :: Linux
    Programming Language :: Python

[files]
packages = 
    x_rebirth_station_calculator
